@@ -12,9 +12,10 @@
 	</longdescription>
 	<use>
 		<flag name="autoupdate">Configures the system to auto-update existing images.</flag>
-		<flag name="btrfs">Enable support for btrfs filesystem formatting 
+		<flag name="btrfs">Enable support for btrfs filesystem formatting
 			(saves space for many images).</flag>
-		<flag name="docker">Ensure prerequisites for Docker scripts are met.</flag>
+		<flag name="docker">Docker image generation functionality.</flag>
+		<flag name="openstack">Openstack image generation functionality.</flag>
 	</use>
 	<upstream>
 		<remote-id type="github">IBT-FMI/gebuilder</remote-id>
